@@ -139,6 +139,8 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 509517  s390x: Even/odd lane confusion in various vector insns
 509590  Run the LTP tests with LTP_QUIET
 509567  unhandled amd64-linux syscall: 443 (quotactl_fd)
+509642  Add missing ppc64-linux syswraps
+509643  Add missing s390x-linux syswraps
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
